<resources>
    <string name="app_name">DriverApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to show location on the
        map.
    </string>
    <string name="location_permission_denied">This app requires location permission to show location on map. Please try
        again and grant access to use the location.
    </string>
    <string name="permission_required_toast">Location permission is required to show location on the map.</string>

    <string name="txt_make_not_available">Make Not Available</string>
    <string name="txt_make_available">Make Available</string>
    <string name="txt_ready">You are ready to accept rides</string>
    <string name="txt_already_have_ride">You already have a ride. Can\'t accept new rides</string>
    <string name="txt_no_ride">You cannot receive rides</string>

    <string name="title_ride_request">Ride Request</string>
    <string name="txt_booking_id">Booking ID</string>
    <string name="txt_payment_method">Payment Method</string>
    <string name="txt_cash">Cash</string>
    <string name="txt_rider_name">Rider Name</string>
    <string name="txt_pickup_addr">Pickup Address</string>
    <string name="txt_dest_addr">Destination Address</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_reject">Reject</string>

</resources>
